# gnosis-mystic

./: .coverage  .gitignore  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  IMPLEMENTATION_OUTLINE.md  LICENSE  Makefile  PROJECT_DEVELOPMENT_LOG.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PYPI_DEPLOY.md  README.md  build_and_deploy.py  coverage.xml  mystic_mcp_standalone.py  pyproject.toml  requirements.txt  start_server.py
.claude/: settings.local.json
docs/: getting_started.md
scripts/: setup_project.py
src/mystic/: __init__.py  cli.py  config.py  main.py  mcp_client.py
src/mystic/core/: __init__.py  function_hijacker.py  function_inspector.py  function_logger.py  performance_tracker.py  state_manager.py
src/mystic/mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_setup.py
tests/unit/test_core/: test_hijacker.py  test_inspector.py  test_logger.py  test_performance_tracker.py  test_state_manager.py
